--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,16 @@
+
+<html>
+
+
+<head>
 <script defer src="./index.js"></script>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <nav id="navbar">
+        <h1>Home</h1>
+        <h1 id="display-page-button">Display Food</h1>
+        <h1 id="delete">Delete Bad Data</h1>
     </nav>
     <div id="container">
         <p id="upload-status"></p>
@@ -25,6 +33,11 @@
             </select>
         </div>
         <button id="submit-button">Create Veggies</button>
+    </div>
+    <div id="FIND">
+    <label for="find-veggie">Find Veggie</label>
+    <input type="text" id="find-veggie">
+    <button type="submit" id="Submit">SUBMIT</button>
     </div>
 
 </body>
